--- a/Aarppo/app/src/main/AndroidManifest.xml
+++ b/Aarppo/app/src/main/AndroidManifest.xml
@@ -19,18 +19,24 @@
         <activity
             android:name=".BlastersMain"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
         <activity android:name=".BlastersSplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"
+                    android:configChanges="orientation"
+                    android:screenOrientation="portrait"/>
             </intent-filter>
         </activity>
 
         <service android:name=".AarpoCheckService" />
 
-        <activity android:name=".AarpoBlast"></activity>
+        <activity android:name=".AarpoBlast"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"></activity>
     </application>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"></uses-permission>
 </manifest>
