--- a/Aarppo/app/src/main/AndroidManifest.xml
+++ b/Aarppo/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.DISABLE_KEYGUARD" />
 
     <application
         android:allowBackup="true"
@@ -41,12 +43,13 @@
         <activity
             android:name=".AarpoBlast"
             android:configChanges="orientation"
+
+            android:showOnLockScreen="true"
             android:screenOrientation="portrait" />
         <activity
             android:name=".PreviewActivity"
             android:label="@string/title_activity_preview"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".FlashScreen"></activity>
     </application>
 
 </manifest>
