fixed countdown timer,
set visibility of seconds in blast activity to false
time delay change in sync
arpo whislte time
the listview update is changed
set portrait view

--- a/Aarppo/app/src/main/AndroidManifest.xml
+++ b/Aarppo/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
             android:name=".FlashScreen"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
-        <activity android:name=".flash_only_screen"></activity>
+        <activity android:name=".flash_only_screen"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
