Code for taking push up is added

--- a/MyChallenge/app/src/main/AndroidManifest.xml
+++ b/MyChallenge/app/src/main/AndroidManifest.xml
@@ -32,9 +32,13 @@
         <activity
             android:name=".CreateChallengePopUpActivity"
             android:theme="@style/custom" />
-        <activity android:name=".AddPlayerPopUpActivity"
+        <activity
+            android:name=".AddPlayerPopUpActivity"
             android:theme="@style/custom"
-            android:windowSoftInputMode="adjustResize|stateHidden"/>
+            android:windowSoftInputMode="adjustResize|stateHidden" />
+        <activity android:name=".TakeChallenge" />
+        <activity android:name=".ResultPopUp"
+            android:theme="@style/custom"></activity>
     </application>
 
 </manifest>
