--- a/MyChallenge/app/src/main/AndroidManifest.xml
+++ b/MyChallenge/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:theme="@style/AppTheme"
        >
         <activity
             android:name=".MainActivity"
@@ -36,7 +37,7 @@
             android:name=".AddPlayerPopUpActivity"
             android:theme="@style/custom"
             android:windowSoftInputMode="adjustResize|stateHidden" />
-        <activity android:name=".TakeChallenge" />
+        <activity android:name=".TakeChallenge"/>
         <activity
             android:name=".ResultPopUp"
             android:theme="@style/custom" />
